infrastructure/k8s/calico/global-default-deny-egress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny-egress
spec:
  selector: all()
  types:
    - Egress
  egress:
    - action: Deny
